# openstack-ansible-os_almanach

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  multi_hosts.yml  provision.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
defaults/: main.yml
doc/source/: conf.py  configure-almanach.rst  configure-ceilometer.rst  index.rst
example/: playbook.yml
examples/: api.yml  collector.yml  db.yml  multi_hosts.yml  single_host.yml
handlers/: main.yml
meta/: main.yml
releasenotes/notes/: almanach-init-config-overrides-ffce7e419061c4da.yaml  almanach_init_time_settings-1ef46f6b9d4fc1df.yaml
tasks/: almanach_init.yml  almanach_init_api.yml  almanach_init_api_systemd.yml  almanach_init_api_upstart.yml  almanach_init_collector.yml  almanach_init_collector_systemd.yml  almanach_init_collector_upstart.yml  almanach_init_systemd.yml  almanach_install.yml  almanach_post_install.yml  almanach_pre_install.yml  main.yml  main.yml-r
templates/: almanach-api-systemd.j2  almanach-api-upstart.j2  almanach-collector-systemd.j2  almanach-collector-upstart-init.j2  almanach-collector-upstart.j2  almanach-systemd-init.j2  almanach.cfg.j2  almanach.conf.j2  logrotate.j2
tests/: ansible-role-requirements.yml  inventory  test-functional-almanach.yml  test-install-almanach.yml  test-install-infra.yml  test-install-mongodb.yml  test-prepare-containers.yml  test-prepare-host.yml  test-prepare-keys.yml  test-vars.yml  test.yml  test.yml-r
vars/: main.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: project.yaml
(+23 files in other folders)
