[metadata]
name = openstack-ansible-os_almanach
summary = os_almanach for OpenStack Ansible
description-file =
    README.rst
author = OpenStack
home-page = http://www.openstack.org/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux

[pbr]
warnerrors = True

[wheel]
universal = 1
